node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app-deployment
  template:
    metadata:
      labels:
        app: node-app-deployment
    spec:
      containers:
      - name: node-app-deployment
        image: letmehandle/node-app
        ports:
        - containerPort: 3000
