flask-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-app
