node-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: node-app
