Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flaskapp
            port:
              number: 80


      - pathType: Prefix
        path: /node
        backend:
          service:
            name: node-app
            port:
              number: 80
